[package]
name = "actix_multipart_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.5.0"
actix-web = "4.2.1"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
futures-util = "0.3.25"
image = "0.24.5"
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["fs"] }
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }
zip = "0.6.5"
